--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Panopli Store</title>
+  <title>Panoplie Store</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -171,7 +171,7 @@
         <div class="container">
           <div class="row justify-content-center text-center mb-5" data-aos="fade">
             <div class="col-md-6 mb-5">
-              <img src="img/undraw_begin_chat.png" alt="Image" class="img-fluid">
+              <img src="img/undraw_short_bio.png" alt="Image" class="img-fluid">
             </div>
           </div>
 
@@ -201,8 +201,6 @@
         </div>
       </div> <!-- .site-section -->
 
-
-
       <div class="site-section pb-0">
         <div class="container">
           <div class="row align-items-center">
@@ -214,7 +212,7 @@
               <p><a href="#">Download Now</a></p>
             </div>
             <div class="col-md-6" data-aos="fade-left">
-              <img src="img/undraw_feedback.png" alt="Image" class="img-fluid">
+              <img src="img/undraw_develop_app.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -231,7 +229,41 @@
               <p><a href="#">Download Now</a></p>
             </div>
             <div class="col-md-6" data-aos="fade-right">
-              <img src="img/undraw_svg_3.svg" alt="Image" class="img-fluid">
+              <img src="img/undraw_work_together.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div> <!-- .site-section -->
+
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4 mr-auto">
+              <h2 class="mb-4">Seamlessly Communicate</h2>
+              <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio,
+                laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt
+                dolore mollitia esse natus beatae.</p>
+              <p><a href="#">Download Now</a></p>
+            </div>
+            <div class="col-md-6" data-aos="fade-left">
+              <img src="img/undraw_begin_chat.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div> <!-- .site-section -->
+
+      <div class="site-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4 ml-auto order-2">
+              <h2 class="mb-4">Gather Feedback</h2>
+              <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio,
+                laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt
+                dolore mollitia esse natus beatae.</p>
+              <p><a href="#">Download Now</a></p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right">
+              <img src="img/undraw_feedback.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
